# chapelure

./: .editorconfig  .gitignore  .hlint.yaml  LICENSE  Makefile  README.md  cabal.project  chapelure.cabal  flake.nix  hie.yaml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  linting.yml
src/: Chapelure.hs
src/Chapelure/: Errors.hs  Style.hs  Types.hs
src/Chapelure/Handler/: Colourful.hs  PlainText.hs
test/: Main.hs
