cabal-version:      3.0
name:               chapelure
version:            0.0.1.0
homepage:           https://github.com/haskell-chapelure/chapelure#readme
bug-reports:        https://github.com/haskell-chapelure/chapelure/issues
author:             Hécate Moonlight
maintainer:         Hécate Moonlight
category:           Pretty Printer
synopsis:           A diagnostics library for Haskell
description:        Chapelure is a diagnostics library for Haskell.
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell-chapelure/chapelure

common common-extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeApplications
    TypeOperators

  default-language:   Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fwrite-ide-info
    -hiedir=.hie -haddock 

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Chapelure
    --Chapelure.Errors
    Chapelure.Handler.Colourful
    Chapelure.Types
    Chapelure.Style

  build-depends:
    , base             >=4.14 && <4.18
    , containers       ^>=0.6
    , nonempty-vector  ^>=0.2
    , optics-core      ^>=0.4
    , prettyprinter    ^>=1.7
    , text             ^>=1.2
    , text-display     ^>=0.0
    , vector           ^>=0.12
    , hsluv-haskell    ^>=0.1
    , colour           ^>= 2.3
    , ansi-terminal    ^>= 0.11


test-suite chapelure-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , base
    , chapelure
    , hspec
    , nonempty-vector
    , prettyprinter
    , string-qq
    , text
    , vector

  other-modules:
